NetBSD Problem Report #58686

From www@netbsd.org  Sun Sep 22 14:27:43 2024
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits)
	 key-exchange X25519 server-signature RSA-PSS (2048 bits) server-digest SHA256
	 client-signature RSA-PSS (2048 bits) client-digest SHA256)
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id A77661A923D
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 22 Sep 2024 14:27:43 +0000 (UTC)
Message-Id: <20240922142742.382771A923E@mollari.NetBSD.org>
Date: Sun, 22 Sep 2024 14:27:42 +0000 (UTC)
From: als@thangorodrim.ch
Reply-To: als@thangorodrim.ch
To: gnats-bugs@NetBSD.org
Subject: www/monolith crashes on NetBSD sparc64
X-Send-Pr-Version: www-1.0

>Number:         58686
>Category:       pkg
>Synopsis:       www/monolith crashes on NetBSD sparc64
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    pin
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Sep 22 14:30:00 +0000 2024
>Closed-Date:    Fri Mar 07 13:50:45 +0000 2025
>Last-Modified:  Fri Mar 07 13:50:45 +0000 2025
>Originator:     Alexander Schreiber
>Release:        NetBSD 10.0  pkgsrc-2024Q2
>Organization:
not much
>Environment:
NetBSD laurelin.XX.XX 10.0 NetBSD 10.0 (SUN_V100) #0: Mon Apr  8 16:56:52 CEST 2024  root@telperion.XX.XX:/usr/obj/sys/arch/sparc64/compile/SUN_V100 sparc64

>Description:
A simple test of www/monolith fails with a crash

monolith -o dump.html https://www.example.com/
thread 'tokio-runtime-worker' panicked at library/std/src/sys_common/net.rs:116:13:
assertion failed: len as usize >= mem::size_of::<c::sockaddr_in6>()
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
thread 'reqwest-internal-sync-runtime' panicked at /usr/pkgobj/www/monolith/work/vendor/hyper-0.14.23/src/client/connect/dns.rs:149:21:
gai background task failed: JoinError::Panic(Id(2), ...)
thread 'main' panicked at /usr/pkgobj/www/monolith/work/vendor/reqwest-0.11.23/src/blocking/client.rs:1183:5:
event loop thread panicked

Running with full backtrace as recommended by the failure output yields:

RUST_BACKTRACE=full monolith -o dump.html https://www.example.com/
thread 'tokio-runtime-worker' panicked at library/std/src/sys_common/net.rs:116:13:
assertion failed: len as usize >= mem::size_of::<c::sockaddr_in6>()
stack backtrace:
   0:           0x56af04 - <unknown>
   1:           0x58fe5c - <unknown>
   2:           0x57b7d8 - <unknown>
   3:           0x56acd8 - <unknown>
   4:           0x5608ac - <unknown>
   5:           0x560430 - <unknown>
   6:           0x560f64 - <unknown>
   7:           0x56b568 - <unknown>
   8:           0x56b194 - <unknown>
   9:           0x5609fc - <unknown>
  10:           0x1efbb4 - <unknown>
  11:           0x1efc90 - <unknown>
  12:           0x57847c - <unknown>
  13:           0x551f60 - <unknown>
  14:           0x4688e0 - <unknown>
  15:           0x473b3c - <unknown>
  16:           0x4750d4 - <unknown>
  17:           0x475584 - <unknown>
  18:           0x4d6bd8 - <unknown>
  19:           0x4d14d4 - <unknown>
  20:           0x4d2690 - <unknown>
  21:           0x559d24 - <unknown>
  22:         0x4130fe28 - <unknown>
  23:         0x41757798 - <unknown>
thread 'reqwest-internal-sync-runtime' panicked at /usr/pkgobj/www/monolith/work/vendor/hyper-0.14.23/src/client/connect/dns.rs:149:21:
gai background task failed: JoinError::Panic(Id(2), ...)
stack backtrace:
   0:           0x56af04 - <unknown>
   1:           0x58fe5c - <unknown>
   2:           0x57b7d8 - <unknown>
   3:           0x56acd8 - <unknown>
   4:           0x5608ac - <unknown>
   5:           0x560430 - <unknown>
   6:           0x560f64 - <unknown>
   7:           0x56b5b0 - <unknown>
   8:           0x56b194 - <unknown>
   9:           0x5609fc - <unknown>
  10:           0x1efbb4 - <unknown>
  11:           0x476bf4 - <unknown>
  12:           0x3a8d3c - <unknown>
  13:           0x3edde0 - <unknown>
  14:           0x33d3ac - <unknown>
  15:           0x34d280 - <unknown>
  16:           0x34e0bc - <unknown>
  17:           0x408dac - <unknown>
  18:           0x3a8bcc - <unknown>
  19:           0x3a7b74 - <unknown>
  20:           0x3c7b68 - <unknown>
  21:           0x442ce0 - <unknown>
  22:           0x43b3a8 - <unknown>
  23:           0x390d54 - <unknown>
  24:           0x3c77f8 - <unknown>
  25:           0x3c5758 - <unknown>
  26:           0x43e4d4 - <unknown>
  27:           0x415d44 - <unknown>
  28:           0x3d6788 - <unknown>
  29:           0x407e14 - <unknown>
  30:           0x3d62e0 - <unknown>
  31:           0x34a6d0 - <unknown>
  32:           0x3fc838 - <unknown>
  33:           0x3fd784 - <unknown>
  34:           0x559d24 - <unknown>
  35:         0x4130fe28 - <unknown>
  36:         0x41757798 - <unknown>
thread 'main' panicked at /usr/pkgobj/www/monolith/work/vendor/reqwest-0.11.23/src/blocking/client.rs:1183:5:
event loop thread panicked
stack backtrace:
   0:           0x56af04 - <unknown>
   1:           0x58fe5c - <unknown>
   2:           0x57b7d8 - <unknown>
   3:           0x56acd8 - <unknown>
   4:           0x5608ac - <unknown>
   5:           0x560430 - <unknown>
   6:           0x560f64 - <unknown>
   7:           0x3fd5b4 - <unknown>
   8:           0x3fc5d8 - <unknown>
   9:           0x1e20d8 - <unknown>
  10:           0x1e20c0 - <unknown>
  11:           0x4260ec - <unknown>
  12:           0x34c010 - <unknown>
  13:           0x3946b0 - <unknown>
  14:           0x2172d0 - <unknown>
  15:           0x1f2350 - <unknown>
  16:           0x1fc0ec - <unknown>
  17:           0x1fc6d4 - <unknown>
  18:           0x55d670 - <unknown>
  19:           0x1f47e8 - <unknown>
  20:           0x1d4f8c - <unknown>
  21:         0x409017ec - <unknown>




>How-To-Repeat:
On a NetBSD 10.0 sparc64 machine, build and install www/monolith and run:

 monolith -o dump.html https://www.example.com/

>Fix:

>Release-Note:

>Audit-Trail:
From: Thomas Klausner <wiz@gatalith.at>
To: NetBSD bugtracking <gnats-bugs@NetBSD.org>
Cc: 
Subject: Re: pkg/58686: www/monolith crashes on NetBSD sparc64
Date: Sun, 22 Sep 2024 16:36:11 +0200

 On Sun, Sep 22, 2024 at 02:30:01PM +0000, als@thangorodrim.ch wrote:
 > On a NetBSD 10.0 sparc64 machine, build and install www/monolith and run:
 > 
 >  monolith -o dump.html https://www.example.com/

 Just to make it explicit: I've just tried the same on NetBSD
 10.99.12/amd64, and here the test works. So it seems to be sparc64
 specific.
  Thomas

Responsible-Changed-From-To: pkg-manager->pin
Responsible-Changed-By: hauke@NetBSD.org
Responsible-Changed-When: Mon, 23 Sep 2024 07:26:15 +0000
Responsible-Changed-Why:
Over to maintainer.


From: pin <voidpin@protonmail.com>
To: gnats-bugs@netbsd.org
Cc: pin@netbsd.org, pkg-manager@netbsd.org, pkgsrc-bugs@netbsd.org, gnats-admin@netbsd.org, hauke@NetBSD.org, als@thangorodrim.ch
Subject: Re: pkg/58686 (www/monolith crashes on NetBSD sparc64)
Date: Mon, 23 Sep 2024 07:47:06 +0000

 On Monday, September 23rd, 2024 at 9:26 AM, hauke@NetBSD.org <hauke@NetBSD.=
 org> wrote:

 > Synopsis: www/monolith crashes on NetBSD sparc64
 >=20
 > Responsible-Changed-From-To: pkg-manager->pin
 >=20
 > Responsible-Changed-By: hauke@NetBSD.org
 > Responsible-Changed-When: Mon, 23 Sep 2024 07:26:15 +0000
 > Responsible-Changed-Why:
 > Over to maintainer.
 >=20

 1) Rust packages are built without debug symbols as the default call is 'ca=
 rgo build --release'.

 2) I have no clue on how to fix this.

 Reported upstream, https://github.com/Y2Z/monolith/issues/411

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/58686 CVS commit: [netbsd-10] src/external/gpl3/gcc/dist/gcc
Date: Sun, 13 Oct 2024 14:20:18 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sun Oct 13 14:20:18 UTC 2024

 Modified Files:
 	src/external/gpl3/gcc/dist/gcc [netbsd-10]: regsub.c

 Log Message:
 Pull up following revision(s) (requested by riastradh in ticket #960):

 	external/gpl3/gcc/dist/gcc/regsub.cc: revision 1.2
 	(applied to ..../regsub.c)

 PR/58686: gorg: Add <sys/types.h> for ssize_t.


 To generate a diff of this commit:
 cvs rdiff -u -r1.4 -r1.4.26.1 src/external/gpl3/gcc/dist/gcc/regsub.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/58686 CVS commit: [netbsd-9] src/external/gpl3/gcc/dist/gcc
Date: Sun, 13 Oct 2024 14:21:42 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sun Oct 13 14:21:42 UTC 2024

 Modified Files:
 	src/external/gpl3/gcc/dist/gcc [netbsd-9]: regsub.c

 Log Message:
 Pull up following revision(s) (requested by riastradh in ticket #1903):

 	external/gpl3/gcc/dist/gcc/regsub.cc: revision 1.2
 	(applied to ..../regsub.c)

 PR/58686: gorg: Add <sys/types.h> for ssize_t.


 To generate a diff of this commit:
 cvs rdiff -u -r1.4 -r1.4.18.1 src/external/gpl3/gcc/dist/gcc/regsub.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: pin@NetBSD.org
State-Changed-When: Fri, 07 Mar 2025 13:50:45 +0000
State-Changed-Why:
Bug is reported upstream. A potential fix should be implemented there.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2025 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.