PR/58686: gorg: Add <sys/types.h> for ssize_t.